Prvi del prenosa sloga @inesmersak

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,31 @@
-<footer class= "footer">
-    <div id="logos">
-        
-    </div>
-    <p>Copyright © {{ 'now' | date: "%Y" }} {{site.author.name}}. All rights reserved. Based on the <a href="https://github.com/PandaSekh/Jekyll-YAMT">YAMT</a> theme designed by <a href="https://alessiofranceschi.me/">Alessio Franceschi</a>.</p>
-</footer>
+<footer>
+    <table>
+      <tr>
+        <td class="logo">
+          <a href="http://www.fmf.uni-lj.si"
+         target="_blank"><img src="{{ site.baseurl }}/assets/img/logo.gif" width="230px" alt="Logo FMF"/></a>
+        </td>
+        <td>
+          <ul>
+            <li><a href="index.html">The Programme</a></li>
+            <li><a href="professors.html">Meet the Professors!</a></li>
+            <li><a href="costs.html">Costs</a></li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li><a href="erasmus.html">Erasmus Programme</a></li>
+            <li><a href="ljubljana.html">Life in Ljubljana</a></li>
+            <li><a href="apply.html">How to Apply</a></li>
+          </ul>
+        </td>
+        <td class="copyright">
+          Fakulteta za matematiko in fiziko, <br />
+          Jadranska ulica 19, 1000 Ljubljana <br />
+          (01) 476 6500 / <a href="mailto:fmf@fmf.uni-lj.si">fmf@fmf.uni-lj.si</a> <br />
+          Design and code: Ines Meršak <br />
+          Pictures are property of Peter Legiša.
+        </td>
+      </tr>
+    </table>
+  </footer>
