--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 
     <!-- TydiForm: LINK TO GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Saira+Extra+Condensed:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,300,400,600&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
     <!-- LINK TO ATOM FEED FOR SEO
     <link rel="alternate" type="application/atom+xml" href="{{ site.url }}feed.xml" /> -->
@@ -25,8 +25,9 @@
     <link rel="shortcut icon" href="{{"assets/favicon.ico" | relative_url }}" type="image/x-icon"> -->
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css">
+    <!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css"> -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/mersak.css">
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
