Popravi glavo, nogo, preimenuj css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css"> -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/mersak.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/masters.css">
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
