--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,16 +7,15 @@
         </td>
         <td>
           <ul>
-            <li><a href="index.html">The Programme</a></li>
-            <li><a href="professors.html">Meet the Professors!</a></li>
-            <li><a href="costs.html">Costs</a></li>
+            <li><a href="index.html">The Summer School</a></li>
+            <li><a href="apply.html">Apply!</a></li>
           </ul>
         </td>
         <td>
           <ul>
-            <li><a href="erasmus.html">Erasmus Programme</a></li>
+            <li><a href="program.html">Program</a></li>
+            <li><a href="venue.html">Venue</a></li>
             <li><a href="ljubljana.html">Life in Ljubljana</a></li>
-            <li><a href="apply.html">How to Apply</a></li>
           </ul>
         </td>
         <td class="copyright">
