--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header id="header">
 	<div id="site_title">
 		<h1><a href="{{ "/" | absolute_url }}">
-			{{site.title}}
+			<!-- {{site.title}} -->
+			<strong>Mathematics</strong><br> in Ljubljana
 		</a></h1>
 		{% if site.data.settings.subtitle.active %}
 		<h2>
