--- a/assets/css/masters.css
+++ b/assets/css/masters.css
@@ -1,3 +1,9 @@
+/* 
+  Design and code: Ines Meršak
+  Adapted for mathematicsinljubljana.fmf.uni-lj.si
+ */
+
+
 html {
     height: 100%;
     margin: 0;
@@ -19,7 +25,8 @@ html {
     margin-top: 1em;
     width: 900px;
     height: 250px;
-    background-image: url('../img/header.png');
+    background-image: url('../img/header.jpg');
+    background-size: 60%;
   }
   
   footer {
@@ -207,7 +214,7 @@ html {
   
   h2 {
     color: #e0202e;
-    font-size: 1.25em;
+    font-size: 1.3em;
     padding: 0;
     font-family: 'Titillium Web', sans-serif;
     font-weight: 600;
@@ -359,6 +366,7 @@ html {
 
 #site_title {
     float: right;
+    padding-left: 2em;
     width: 45%;
     height: 250px;
     background-color: #ba232b;
@@ -368,7 +376,10 @@ html {
     text-decoration: none;
 }
 #site_title h1 {
-    margin: 1em;
+    font-size: 1.8em;
+    line-height: 1.8em;
+    margin: 0;
+    margin-top: 2em;
 }
 #site_title h1 a {
     color: #ffffff;
@@ -379,5 +390,5 @@ html {
 #site_title h2 {
     color: #ffffff;
     font-weight: 200;
-    margin: 1em;
+    margin-top: 0;
 }
