--- a/assets/css/masters-orig.css
+++ b/assets/css/masters-orig.css
@@ -1,9 +1,3 @@
-/* 
-  Design and code: Ines Meršak
-  Adapted for mathematicsinljubljana.fmf.uni-lj.si
- */
-
-
 html {
     height: 100%;
     margin: 0;
@@ -25,8 +19,7 @@ html {
     margin-top: 1em;
     width: 900px;
     height: 250px;
-    background-image: url('../img/header.jpg');
-    background-size: 60%;
+    background-image: url('../img/header.png');
   }
   
   footer {
@@ -214,7 +207,7 @@ html {
   
   h2 {
     color: #e0202e;
-    font-size: 1.3em;
+    font-size: 1.25em;
     padding: 0;
     font-family: 'Titillium Web', sans-serif;
     font-weight: 600;
@@ -360,87 +353,4 @@ html {
   
   .check:active {
     background-color: rgb(243, 196, 196);
-  }
-
-  /* Dodatki KB */
-
-#site_title {
-    float: right;
-    padding-left: 2em;
-    width: 45%;
-    height: 250px;
-    background-color: #ba232b;
-    
-}
-
-#site_title a {
-    text-decoration: none;
-}
-#site_title h1 {
-    font-size: 1.8em;
-    line-height: 1.8em;
-    margin: 0;
-    margin-top: 2em;
-}
-#site_title h1 a {
-    color: #ffffff;
-    font-size: 1.7em;
-    font-weight: 300;
-    text-transform: uppercase;   
-}
-#site_title h2 {
-    color: #ffffff;
-    font-weight: 200;
-    margin-top: 0;
-}
-
-
-@media handheld and (max-width: 900px), screen and (max-width: 900px) {
-
-  header {
-    margin-top: 0;
-    width: 100%;
-    height: 100px;
-    background-size: auto 100%;
-  }
-
-  #container {
-    margin: 0;
-    padding-top: 0;
-    width: 100%;
-    min-height: 100%;
-    border: 0;
-  }
-
-  #content-wrapper {
-    width: auto;
-    padding: 0 1em;
-  }
-
-  main {
-    width: 100%;
-  }
-
-  #site_title {
-      padding-left: 1.5em;
-      height: 100px;
-  }
-  
-  #site_title a {
-      text-decoration: none;
-  }
-  #site_title h1 {
-      font-size: 1.2em;
-      line-height: 1.4em;
-      margin: 0;
-      margin-top: 0.5em;
-  }
-  #site_title h1 a {
-      font-size: 1.2em;
-      text-transform: uppercase;   
-  }
-  #site_title h2 {
-      font-size: 1.1em;
-  }
-  
   }
