Malo bolj prijazno za majhne zaslone

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,16 @@
 <footer>
-    <table>
-      <tr>
-        <td class="logo">
-          <a href="http://www.fmf.uni-lj.si"
-         target="_blank"><img src="{{ site.baseurl }}/assets/img/logo.gif" width="230px" alt="Logo FMF"/></a>
-        </td>
-        <td>
-          <ul>
-            <li><a href="index.html">The Summer School</a></li>
-            <li><a href="apply.html">Apply!</a></li>
-          </ul>
-        </td>
-        <td>
-          <ul>
-            <li><a href="program.html">Program</a></li>
-            <li><a href="venue.html">Venue</a></li>
-            <li><a href="ljubljana.html">Life in Ljubljana</a></li>
-          </ul>
-        </td>
-        <td class="copyright">
-          Fakulteta za matematiko in fiziko, <br />
-          Jadranska ulica 19, 1000 Ljubljana <br />
-          (01) 476 6500 / <a href="mailto:fmf@fmf.uni-lj.si">fmf@fmf.uni-lj.si</a> <br />
-          Design and code: Ines Meršak <br />
-          Pictures are property of Peter Legiša.
-        </td>
-      </tr>
-    </table>
-  </footer>
+  <div class="logo">
+    <a href="http://www.fmf.uni-lj.si"
+   target="_blank"><img src="{{ site.baseurl }}/assets/img/logo.gif" width="230px" alt="Logo FMF"/></a>
+  </div>
+  <div class="contact">
+    Fakulteta za matematiko in fiziko, <br />
+    Jadranska ulica 19, 1000 Ljubljana <br />
+    (01) 476 6500 / <a href="mailto:fmf@fmf.uni-lj.si">fmf@fmf.uni-lj.si</a> <br /> 
+  </div>
+  <div class="copyright">
+    Design and code: Ines Meršak <br />
+    Pictures are property of Peter Legiša.
+  </div>
+</footer>
+<div class="clr"></div>
