--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,15 +182,15 @@ html {
   
   /* TIMETABLE */
 
-  .timetable .minicourse {
+  .minicourse {
     background-color: rgb(244, 194, 197);  
   }
 
-  .timetable .researchgroup {
+  .researchgroup {
     background-color: rgb(217, 211, 213);
   }
 
-  .timetable .info {
+  .info {
     background-color: rgb(240, 237, 238);
   }
 
