--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<div id="site_title">
 		<h1><a href="{{ "/" | absolute_url }}">
 			<!-- {{site.title}} -->
-			<strong>Mathematics</strong><br> in Ljubljana
+			<strong>Odprti laboratorij za matematiko v uporabi - header</strong><br>
 		</a></h1>
 		{% if site.data.settings.subtitle.active %}
 		<h2>
