--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ html {
     margin-top: 1em;
     width: 900px;
     height: 250px;
-    background-image: url('../img/header.jpg');
+    background-image: url('../img/header.png');
     background-color: #ba232b;
     background-size: 60%;
     background-position: top left;
