--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
     (01) 476 6500 / <a href="mailto:fmf@fmf.uni-lj.si">fmf@fmf.uni-lj.si</a> <br /> 
   </div>
   <div class="copyright">
-    Design and code: Ines Meršak <br />
-    Pictures are property of Peter Legiša.
+    Design and code: Ines Meršak,  ... <br />
+    Logo: Katja Berčič
   </div>
 </footer>
 <div class="clr"></div>
