--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,20 @@
 <footer>
-  <div class="logo">
+  <div class="info">
+    <p>
+      Fakulteta za matematiko in fiziko, <br />
+      Jadranska ulica 19, 1000 Ljubljana <br />
+      (01) 476 6500 / <a href="mailto:fmf@fmf.uni-lj.si">fmf@fmf.uni-lj.si</a> <br /> 
+    </p>
+    <p>
+      Design and code: Ines Meršak <br />
+      Pictures are property of Peter Legiša.
+    </p>
+  </div>
+  <div class="logos">
     <a href="http://www.fmf.uni-lj.si"
-   target="_blank"><img src="{{ site.baseurl }}/assets/img/logo.gif" width="230px" alt="Logo FMF"/></a>
-  </div>
-  <div class="contact">
-    Fakulteta za matematiko in fiziko, <br />
-    Jadranska ulica 19, 1000 Ljubljana <br />
-    (01) 476 6500 / <a href="mailto:fmf@fmf.uni-lj.si">fmf@fmf.uni-lj.si</a> <br /> 
-  </div>
-  <div class="copyright">
-    Design and code: Ines Meršak <br />
-    Pictures are property of Peter Legiša.
+   target="_blank"><img src="{{ site.baseurl }}/assets/img/logo-fmf.gif" width="200px" alt="Logo FMF"/></a>
+   <a href="http://www.fmf.uni-lj.si"
+   target="_blank"><img src="{{ site.baseurl }}/assets/img/logo-imfm.gif" width="200px" alt="Logo IMFM"/></a>
   </div>
 </footer>
 <div class="clr"></div>
