Popravi ozadje v nogi

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ html {
   }
   
   footer div.info {
+    background-color: #ffffff;
     float: left;
     text-align: justify;
     padding-left: 1em;
