--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,9 +12,9 @@
   </div>
   <div class="logos">
     <a href="http://www.fmf.uni-lj.si"
-   target="_blank"><img src="{{ site.baseurl }}/assets/img/logo-fmf.gif" width="200px" alt="Logo FMF"/></a>
+   target="_blank"><img src="{{ site.baseurl }}/assets/img/logo-fmf.png" height="100px" alt="Logo FMF"/></a>
    <a href="http://www.fmf.uni-lj.si"
-   target="_blank"><img src="{{ site.baseurl }}/assets/img/logo-imfm.gif" width="200px" alt="Logo IMFM"/></a>
+   target="_blank"><img src="{{ site.baseurl }}/assets/img/logo-imfm.gif" height="80px" alt="Logo IMFM"/></a>
   </div>
 </footer>
 <div class="clr"></div>
